tests/toast-results/Ver_2_Tests-2023-06-21T21:37:40.688Z/LOCAL+C2Jrv/jt2/jlog.txt
Preprocessing...
Side effect checking enabled
ERROR:
Encountered a parsing failure in parsing pre-processed code:
Line 6, col 1:
  5 | 
> 6 | jtask function this_should_run(numer) {
      ^
  7 | 
Expected end of input or a declaration or a statement
Stderr Follows: 



